[package]
name = "console-games"
version = "1.1.7"
edition = "2021"
description = "A collection of console games written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arskiir/console-games"
keywords = ["game", "console"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
eff-wordlist = "1.0.2"
rand = "0.8.5"
random-number = "0.1.8"
